tests/error/preprocessor_dup_else.vbc
#ifdef DUP_ELSE_TEST
int a = 1;
#else
int b = 2;
#else
int c = 3;
#endif

int main() {
    return 0;
}
